2010-08-02  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Gustavo Noronha Silva.

        [GTK] WebKit2 requires lazy cursor support
        https://bugs.webkit.org/show_bug.cgi?id=43053

        Add lazy cursor support for GTK+. Lazy cursor support is used on some
        WebKit2 ports to support changing the cursor.

        No new tests, as this should not change functionality.

        * platform/Cursor.h: Changed the m_platformCursor member to be a GRefPtr.
        This simplifies the logic a great deal.
        * platform/gtk/CursorGtk.cpp:
        (WebCore::createNamedCursor): Added, adapted from existing code.
        (WebCore::createCustomCursor): Added, adapted from existing code.
        (WebCore::Cursor::ensurePlatformCursor): Added.
        (WebCore::Cursor::Cursor): Added.
        (WebCore::Cursor::operator=): Added.
        (WebCore::Cursor::~Cursor): Added.
        * platform/gtk/WidgetGtk.cpp:
        (WebCore::Widget::setCursor): Call platformCusor now to get the actual GdkCursor.

2010-08-02  Rajiv Makhijani  <rajivmakhijani@chromium.org>

        Reviewed by Adam Barth. 

        Committed by Dirk Pranke.

        Bug 38705 - [v8] chromium fails http/tests/sandbox-inherit-to-initial-document-2
        https://bugs.webkit.org/show_bug.cgi?id=38705

        WebCore::V8Proxy::retrieve(Frame* frame) calls WebCore::ScriptController::canExecuteScripts
        and returns 0 if canExecuteScripts is false. It should return the proxy regardless
        of whether the frame can execute scripts.

        * bindings/v8/V8Proxy.cpp:
        (WebCore::V8Proxy::retrieve): Removed canExecuteScripts check.

2010-08-02  Brady Eidson  <beidson@apple.com>

        Reviewed by Anders Carlsson.

        Add VisitedLinkStrategy for each platform to implement
        https://bugs.webkit.org/show_bug.cgi?id=43393

        No new tests. (No change in behavior)

        * WebCore.exp.in:
        * WebCore.xcodeproj/project.pbxproj:
        