@@ -1,3 +1,10 @@
+2010-08-02  Brady Eidson  <beidson@apple.com>
+
+        Reviewed by NOBODY (Build fix, forgot to svn add this file)
+
+        * platform/VisitedLinkStrategy.h: Added.
+        (WebCore::VisitedLinkStrategy::~VisitedLinkStrategy):
+
 2010-08-02  Martin Robinson  <mrobinson@igalia.com>
 
         Reviewed by Gustavo Noronha Silva.
